Basically I display a root object which is in the ZODB.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,25 @@
 [buildout]
 extends = versions.cfg
+          deploy.cfg
+
 develop = src/cromdemo
           src/dolmen.sessions.jwt
-parts = app run config
+
+parts = zodb_conf config app run  
 newest = true
 extensions = mr.developer
 versions = versions
 find-links = http://pypi.dolmen-project.org/find-links
 show-picked-versions = true
 eggs-directory = ./eggs
+
+[zodb_conf]
+recipe = collective.recipe.template
+input = etc/zodb.conf.in
+output = ${buildout:directory}/zodb.conf
+blobdir = ${app:blobdir}
+datadir = ${app:datadir}
+
 
 # mr.developer
 always-checkout = true
@@ -18,6 +29,7 @@ sources-dir = checkouts
 
 
 [sources]
+cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb
 crom = git https://github.com/Cromlech/crom
 grokker = git https://github.com/Cromlech/grokker
 dawnlight = git https://github.com/Cromlech/dawnlight
@@ -69,3 +81,4 @@ conf-templates-cache = ${app:cachedir}
 conf-app-zcml = ${buildout:directory}/app.zcml
 conf-session-timeout = 300
 conf-session-jwt_key = ${buildout:directory}/jwt.key
+conf-zodb-config = ${zodb_conf:output}
