--- a/versions.cfg
+++ b/versions.cfg
@@ -71,3 +71,5 @@ zope.location = 4.1.0
 # Required by:
 # cromdemo==1.0
 zope.schema = 4.5.0
+
+cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb
