Added lots of documentation.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -39,7 +39,7 @@ cromlech.auth = git https://github.com/Cromlech/cromlech.auth
 cromlech.configuration = git https://github.com/Cromlech/cromlech.configuration
 cromlech.content = git https://github.com/Cromlech/cromlech.content
 cromlech.grok = git https://github.com/Cromlech/cromlech.grok
-cromlech.jwt = git https://github.com/Cromlech/cromlech.jwt
+cromlech.jwt = git https://github.com/PythonLinks/cromlech.jwt
 dolmen.collection = git https://github.com/Cromlech/dolmen.collection
 dolmen.template = git https://github.com/Cromlech/dolmen.template
 cromlech.sessions.jwt = git https://github.com/Cromlech/cromlech.sessions.jwt
