Now adding containers. Two views, one for containers, one for leaves.
Still need to fix favicon.
Still need to not be able to add stuff to leaves.

Leaves are suclases of BTreeContainer, but not of persistent.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -53,7 +53,9 @@ cromlech.i18n = git https://github.com/Cromlech/cromlech.i18n branch=crom
 cromlech.security = git https://github.com/Cromlech/cromlech.security branch=crom
 cromlech.webob = git https://github.com/Cromlech/cromlech.webob branch=crom
 dolmen.forms.base = git https://github.com/Cromlech/dolmen.forms.base branch=crom
+dolmen.forms.crud = git https://github.com/Cromlech/dolmen.forms.crud branch=crom
 dolmen.forms.ztk = git https://github.com/Cromlech/dolmen.forms.ztk branch=crom
+dolmen.message = git https://github.com/Cromlech/dolmen.message branch=crom
 dolmen.tales = git https://github.com/Cromlech/dolmen.tales branch=crom
 dolmen.view = git https://github.com/Cromlech/dolmen.view branch=crom
 dolmen.viewlet = git https://github.com/Cromlech/dolmen.viewlet branch=crom
