I continue to polish and improve this demo.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -37,6 +37,7 @@ dolmen.recipe.jsonenv = git https://github.com/trollfot/dolmen.recipe.jsonenv
 cromlech.auth = git https://github.com/Cromlech/cromlech.auth
 cromlech.configuration = git https://github.com/Cromlech/cromlech.configuration
 cromlech.content = git https://github.com/Cromlech/cromlech.content
+dolmen.breadcrumbs = git https://github.com/clozinski/dolmen.breadcrumbs
 cromlech.grok = git https://github.com/Cromlech/cromlech.grok
 
 cromlech.jwt = git https://github.com/Cromlech/cromlech.jwt
@@ -45,7 +46,7 @@ dolmen.collection = git https://github.com/Cromlech/dolmen.collection
 dolmen.template = git https://github.com/Cromlech/dolmen.template
 
 # Using branching
-cromlech.location = git https://github.com/Cromlech/cromlech.location branch=crom
+cromlech.location = git https://github.com/clozinski/cromlech.location branch=crom
 
 cromlech.browser = git https://github.com/Cromlech/cromlech.browser branch=crom
 cromlech.dawnlight = git https://github.com/Cromlech/cromlech.dawnlight branch=crom
