Added in missing files.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -46,7 +46,7 @@ dolmen.collection = git https://github.com/Cromlech/dolmen.collection
 dolmen.template = git https://github.com/Cromlech/dolmen.template
 
 # Using branching
-cromlech.location = git https://github.com/clozinski/cromlech.location branch=crom
+cromlech.location = git https://github.com/clozinski/cromlech.location 
 
 cromlech.browser = git https://github.com/Cromlech/cromlech.browser branch=crom
 cromlech.dawnlight = git https://github.com/Cromlech/cromlech.dawnlight branch=crom
