Automatically create needed directories.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,13 +3,21 @@ extends = versions.cfg
           deploy.cfg
 
 develop = src/cromdemo
-parts = zodb_conf config app run  
+parts = mkdirs zodb_conf config app run  
 newest = true
 extensions = mr.developer
 versions = versions
 find-links = http://pypi.dolmen-project.org/find-links
 show-picked-versions = true
 eggs-directory = ./eggs
+
+[mkdirs]
+recipe = z3c.recipe.mkdir
+paths =
+    ${buildout:directory}/blobs
+    ${buildout:directory}/data
+
+
 
 [zodb_conf]
 recipe = collective.recipe.template
