Fixing issues from missing utils.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,6 @@ parts = mkdirs zodb_conf config app run
 newest = true
 extensions = mr.developer
 versions = versions
-find-links = http://pypi.dolmen-project.org/find-links
 show-picked-versions = true
 eggs-directory = ./eggs
 
@@ -35,7 +34,6 @@ sources-dir = checkouts
 
 
 [sources]
-cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb
 crom = git https://github.com/Cromlech/crom
 grokker = git https://github.com/Cromlech/grokker
 dawnlight = git https://github.com/Cromlech/dawnlight
@@ -45,15 +43,16 @@ dolmen.recipe.jsonenv = git https://github.com/trollfot/dolmen.recipe.jsonenv
 cromlech.auth = git https://github.com/Cromlech/cromlech.auth
 cromlech.configuration = git https://github.com/Cromlech/cromlech.configuration
 cromlech.content = git https://github.com/Cromlech/cromlech.content
-dolmen.breadcrumbs = git https://github.com/clozinski/dolmen.breadcrumbs
+dolmen.breadcrumbs = git https://github.com/Cromlech/dolmen.breadcrumbs
 cromlech.grok = git https://github.com/Cromlech/cromlech.grok
-
 cromlech.jwt = git https://github.com/Cromlech/cromlech.jwt
 cromlech.sessions.jwt = git https://github.com/Cromlech/cromlech.sessions.jwt
 dolmen.collection = git https://github.com/Cromlech/dolmen.collection
 dolmen.template = git https://github.com/Cromlech/dolmen.template
+dolmen.batch = git https://github.com/Cromlech/dolmen.batch
 
 # Using branching
+cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb branch=crom
 cromlech.location = git https://github.com/clozinski/cromlech.location 
 
 cromlech.browser = git https://github.com/Cromlech/cromlech.browser branch=crom
