--- a/buildout.cfg
+++ b/buildout.cfg
@@ -35,7 +35,7 @@ sources-dir = checkouts
 
 
 [sources]
-cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb
+cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb branch=crom
 crom = git https://github.com/Cromlech/crom
 grokker = git https://github.com/Cromlech/grokker
 dawnlight = git https://github.com/Cromlech/dawnlight
@@ -68,7 +68,7 @@ dolmen.message = git https://github.com/Cromlech/dolmen.message branch=crom
 dolmen.tales = git https://github.com/Cromlech/dolmen.tales branch=crom
 dolmen.view = git https://github.com/Cromlech/dolmen.view branch=crom
 dolmen.viewlet = git https://github.com/Cromlech/dolmen.viewlet branch=crom
-
+persistent=git https://github.com/zopefoundation/persistent/tree/4.2.4.1/persistent
 
 [app]
 recipe = zc.recipe.egg
