--- a/buildout.cfg
+++ b/buildout.cfg
@@ -63,7 +63,7 @@ cromlech.i18n = git https://github.com/Cromlech/cromlech.i18n branch=crom
 cromlech.security = git https://github.com/Cromlech/cromlech.security branch=crom
 cromlech.webob = git https://github.com/Cromlech/cromlech.webob branch=crom
 dolmen.forms.base = git https://github.com/Cromlech/dolmen.forms.base branch=crom
-dolmen.forms.crud = git https://github.com/Cromlech/dolmen.forms.crud branch=crom
+zopache = git https://github.com/pythonlinks/zopache
 dolmen.forms.ztk = git https://github.com/Cromlech/dolmen.forms.ztk branch=crom
 dolmen.message = git https://github.com/Cromlech/dolmen.message branch=crom
 dolmen.tales = git https://github.com/Cromlech/dolmen.tales branch=crom
