Removed branch=crom.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -35,7 +35,7 @@ sources-dir = checkouts
 
 [sources]
 
-cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb branch=crom
+cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb 
 crom = git https://github.com/Cromlech/crom
 grokker = git https://github.com/Cromlech/grokker
 dawnlight = git https://github.com/Cromlech/dawnlight
@@ -54,21 +54,21 @@ dolmen.template = git https://github.com/Cromlech/dolmen.template
 dolmen.batch = git https://github.com/Cromlech/dolmen.batch
 
 # Using branching
-cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb branch=crom
+cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb 
 cromlech.location = git https://github.com/clozinski/cromlech.location 
 
-cromlech.browser = git https://github.com/Cromlech/cromlech.browser branch=crom
-cromlech.dawnlight = git https://github.com/Cromlech/cromlech.dawnlight branch=crom
-cromlech.i18n = git https://github.com/Cromlech/cromlech.i18n branch=crom
-cromlech.security = git https://github.com/Cromlech/cromlech.security branch=crom
-cromlech.webob = git https://github.com/Cromlech/cromlech.webob branch=crom
-dolmen.forms.base = git https://github.com/Cromlech/dolmen.forms.base branch=crom
+cromlech.browser = git https://github.com/Cromlech/cromlech.browser 
+cromlech.dawnlight = git https://github.com/Cromlech/cromlech.dawnlight 
+cromlech.i18n = git https://github.com/Cromlech/cromlech.i18n 
+cromlech.security = git https://github.com/Cromlech/cromlech.security 
+cromlech.webob = git https://github.com/Cromlech/cromlech.webob 
+dolmen.forms.base = git https://github.com/Cromlech/dolmen.forms.base 
 zopache = git https://github.com/pythonlinks/zopache
-dolmen.forms.ztk = git https://github.com/Cromlech/dolmen.forms.ztk branch=crom
-dolmen.message = git https://github.com/Cromlech/dolmen.message branch=crom
-dolmen.tales = git https://github.com/Cromlech/dolmen.tales branch=crom
-dolmen.view = git https://github.com/Cromlech/dolmen.view branch=crom
-dolmen.viewlet = git https://github.com/Cromlech/dolmen.viewlet branch=crom
+dolmen.forms.ztk = git https://github.com/Cromlech/dolmen.forms.ztk 
+dolmen.message = git https://github.com/Cromlech/dolmen.message 
+dolmen.tales = git https://github.com/Cromlech/dolmen.tales 
+dolmen.view = git https://github.com/Cromlech/dolmen.view 
+dolmen.viewlet = git https://github.com/Cromlech/dolmen.viewlet 
 
 [app]
 recipe = zc.recipe.egg
