Changes for removing crom.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -37,7 +37,7 @@ sources-dir = checkouts
 
 cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb 
 crom = git https://github.com/Cromlech/crom
-grokker = git https://github.com/Cromlech/grokker
+grokker = git https://github.com/Cromlech/cromlech.grok
 dawnlight = git https://github.com/Cromlech/dawnlight
 dolmen.recipe.jsonenv = git https://github.com/trollfot/dolmen.recipe.jsonenv
 
@@ -45,7 +45,7 @@ dolmen.recipe.jsonenv = git https://github.com/trollfot/dolmen.recipe.jsonenv
 cromlech.auth = git https://github.com/Cromlech/cromlech.auth
 cromlech.configuration = git https://github.com/Cromlech/cromlech.configuration
 cromlech.content = git https://github.com/Cromlech/cromlech.content
-dolmen.breadcrumbs = git https://github.com/Cromlech/dolmen.breadcrumbs
+cromlech.breadcrumbs = git https://github.com/Cromlech/cromlech.breadcrumbs
 cromlech.grok = git https://github.com/Cromlech/cromlech.grok
 cromlech.jwt = git https://github.com/Cromlech/cromlech.jwt
 cromlech.sessions.jwt = git https://github.com/Cromlech/cromlech.sessions.jwt
@@ -59,7 +59,7 @@ cromlech.location = git https://github.com/clozinski/cromlech.location
 
 cromlech.browser = git https://github.com/Cromlech/cromlech.browser 
 cromlech.dawnlight = git https://github.com/Cromlech/cromlech.dawnlight 
-cromlech.i18n = git https://github.com/Cromlech/cromlech.i18n 
+cromlech.i18n = git https://github.com/Cromlech/cromlech.i18n
 cromlech.security = git https://github.com/Cromlech/cromlech.security 
 cromlech.webob = git https://github.com/Cromlech/cromlech.webob 
 dolmen.forms.base = git https://github.com/Cromlech/dolmen.forms.base 
