removed crom branch from deploy.cfg

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -15,29 +15,29 @@ sources-dir = checkouts
 
 
 [sources]
-crom = git https://github.com/Cromlech/crom branch=crom
+crom = git https://github.com/Cromlech/crom 
 dolmen.container = git https://github.com/Cromlech/dolmen.container 
-cromlech.container = git https://github.com/Cromlech/cromlech.container branch=crom
+cromlech.container = git https://github.com/Cromlech/cromlech.container 
 grokker = git https://github.com/Cromlech/grokker
 dawnlight = git https://github.com/Cromlech/dawnlight 
 
 # flatten (crom = master)
 dolmen.recipe.jsonenv = git https://github.com/trollfot/dolmen.recipe.jsonenv 
-cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb branch=crom
+cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb 
 cromlech.location = git https://github.com/Cromlech/cromlech.location 
 dolmen.collection = git https://github.com/Cromlech/dolmen.collection 
 dolmen.template = git https://github.com/Cromlech/dolmen.template 
 
 # Using branching
-cromlech.webob = git https://github.com/Cromlech/cromlech.webob  branch=crom
-cromlech.i18n = git https://github.com/Cromlech/cromlech.i18n  branch=crom
-cromlech.browser = git https://github.com/Cromlech/cromlech.browser  branch=crom
-dolmen.view = git https://github.com/Cromlech/dolmen.view  branch=crom
-dolmen.viewlet = git https://github.com/Cromlech/dolmen.viewlet  branch=crom
-dolmen.forms.base = git https://github.com/Cromlech/dolmen.forms.base  branch=crom
-dolmen.forms.ztk = git https://github.com/Cromlech/dolmen.forms.ztk  branch=crom
-dolmen.tales = git https://github.com/Cromlech/dolmen.tales  branch=crom
-cromlech.dawnlight = git https://github.com/Cromlech/cromlech.dawnlight  branch=crom
+cromlech.webob = git https://github.com/Cromlech/cromlech.webob  
+cromlech.i18n = git https://github.com/Cromlech/cromlech.i18n  
+cromlech.browser = git https://github.com/Cromlech/cromlech.browser  
+dolmen.view = git https://github.com/Cromlech/dolmen.view  
+dolmen.viewlet = git https://github.com/Cromlech/dolmen.viewlet  
+dolmen.forms.base = git https://github.com/Cromlech/dolmen.forms.base  
+dolmen.forms.ztk = git https://github.com/Cromlech/dolmen.forms.ztk  
+dolmen.tales = git https://github.com/Cromlech/dolmen.tales  
+cromlech.dawnlight = git https://github.com/Cromlech/cromlech.dawnlight  
 
 
 [app]
