Lots of small changes to make the user experience better.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -69,7 +69,7 @@ dolmen.message = git https://github.com/Cromlech/dolmen.message
 dolmen.tales = git https://github.com/Cromlech/dolmen.tales 
 dolmen.view = git https://github.com/Cromlech/dolmen.view 
 dolmen.viewlet = git https://github.com/Cromlech/dolmen.viewlet 
-
+restrictedpython = git https://github.com/zopefoundation/RestrictedPython
 [app]
 recipe = zc.recipe.egg
 cachedir = ${buildout:directory}/cache
