Continue to improve the user interface.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -70,6 +70,7 @@ dolmen.tales = git https://github.com/Cromlech/dolmen.tales
 dolmen.view = git https://github.com/Cromlech/dolmen.view 
 dolmen.viewlet = git https://github.com/Cromlech/dolmen.viewlet 
 restrictedpython = git https://github.com/zopefoundation/RestrictedPython
+zopache.copy=git https://github.com/PythonLinks/zopache.copy
 [app]
 recipe = zc.recipe.egg
 cachedir = ${buildout:directory}/cache
