Fixed readme Fixed dolmen.breadcrumbs

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -45,13 +45,13 @@ dolmen.recipe.jsonenv = git https://github.com/trollfot/dolmen.recipe.jsonenv
 cromlech.auth = git https://github.com/Cromlech/cromlech.auth
 cromlech.configuration = git https://github.com/Cromlech/cromlech.configuration
 cromlech.content = git https://github.com/Cromlech/cromlech.content
-cromlech.breadcrumbs = git https://github.com/Cromlech/cromlech.breadcrumbs
 cromlech.grok = git https://github.com/Cromlech/cromlech.grok
 cromlech.jwt = git https://github.com/Cromlech/cromlech.jwt
 cromlech.sessions.jwt = git https://github.com/Cromlech/cromlech.sessions.jwt
 dolmen.collection = git https://github.com/Cromlech/dolmen.collection
 dolmen.template = git https://github.com/Cromlech/dolmen.template
 dolmen.batch = git https://github.com/Cromlech/dolmen.batch
+dolmen.breadcrumbs = git https://github.com/Cromlech/dolmen.breadcrumbs
 
 # Using branching
 cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb 
