Added grokker to buildout.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -37,7 +37,7 @@ sources-dir = checkouts
 
 cromlech.zodb = git https://github.com/Cromlech/cromlech.zodb 
 crom = git https://github.com/Cromlech/crom
-grokker = git https://github.com/Cromlech/cromlech.grok
+grokker = git https://github.com/Cromlech/grokker
 dawnlight = git https://github.com/Cromlech/dawnlight
 dolmen.recipe.jsonenv = git https://github.com/trollfot/dolmen.recipe.jsonenv
 
